--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
   </section>
   <div class="container">
-    <input>
+    <input />
+    <div id="target"></div>
   </div>
   <script src="utils.js"></script>
   <script src="index.js"></script>
