--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </div>
   </section>
   <div class="container">
-    <input />
-    <div id="target"></div>
+  </div>
+
+  <div id="target"></div>
   </div>
   <script src="utils.js"></script>
   <script src="index.js"></script>
