--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     </div>
   </section>
   <div class="container">
+    <div class="autocomplete"></div>
   </div>
 
-  <div id="target"></div>
+
   </div>
   <script src="utils.js"></script>
   <script src="index.js"></script>
